// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Sith When has name When has planet Sith 1`] = `
<li
  className="css-slot"
>
  <h3>
    Skere Kaan
  </h3>
  <h6>
    Homeworld: Coruscant
  </h6>
</li>
`;

exports[`Sith When has name When lacks planet Sith 1`] = `
<li
  className="css-slot"
>
  <h3>
    Skere Kaan
  </h3>
  <h6 />
</li>
`;

exports[`Sith When lacks name When has planet Sith 1`] = `
<li
  className="css-slot"
>
  <h3 />
  <h6>
    Homeworld: Coruscant
  </h6>
</li>
`;

exports[`Sith When lacks name When lacks planet Sith 1`] = `
<li
  className="css-slot"
>
  <h3 />
  <h6 />
</li>
`;
